# otaru

./: .editorconfig  .envrc  .envrc.sample  .gitignore  .markdownlint.json  .mcp.json  .tool-versions  1password-credentials.json.sample  AGENTS.md  GOTCHA.md  LICENSE  LICENSE.md  Makefile  PLANNING.md  README.md  SECURITY.md  atlantis.yaml  index.yaml  package-lock.json  package.json  renovate.json  renovate.json5  token.sample
.codex/: config.toml
ansible/: ansible.cfg  inventory.ini  inventory.yaml  requirements.yaml
argocd/: README.md  manifest.jsonnet
diagrams/: AGENTS.md  CLAUDE.md  README.md  otaru-architecture.py  pyproject.toml
doc/: README.md  how_to_set_up_rpi_with_waveshare_poe_hat_b_and_install_k3s_from_scratch.md
documentation/: README.md  connectivity.md  create_rpi4_image.md  create_rpi5_nvme_image.md  create_rpi5_nvme_luks_image.md  create_rpi_image.md  gotcha.md  infrastructure.md  inventory.md  ip.md  luks_passphrase.md  luks_remote_unlock.md  luks_vault.md  secrets.md  set_up_rpi.md  talos.md
hack/: accounts.EXAMPLE.sh  add-helm-repos.sh  bootstrap.sh  check-image-digests.sh  delete-git-tags.sh  generate-atlantis-yaml.sh  helm_charts_pull_all_dep.sh  luks-cryptroot-unlock.sh  luks-node-init.sh  luks-postflight-check.sh  luks-preflight-check.sh  luks-rpi5-rescue-rebuild.sh  remove-terragrunt-cache.sh  update-all-helm-dependency.sh  update-charts.sh
infrastructure/: project.hcl  root.hcl  terragrunt.hcl  version.hcl
playground/: README.md  cleanup.sh  cni.sh  etcd.sh  init_etcd.yaml  init_first_master_template.yaml  init_master.yaml  up.sh  (+3 more)
(+865 files in other folders)
