[tool.poetry]
name = "otaru-diagram"
version = "0.1.0"
description = "Architecture diagrams for Otaru"
authors = ["siutsin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.0.0,<26.0.0)"
]
